[tool.poetry]
name = "jax-tqdm"
version = "0.1.0"
description = "Tqdm progress bar for JAX scans and loops"
authors = ["jeremiecoullon", "zombie-einstein"]
readme = "README.md"
packages = [{include = "jax_tqdm"}]
homepage = "https://github.com/jeremiecoullon/jax-tqdm"
repository = "https://github.com/jeremiecoullon/jax-tqdm"
keywords = ["jax", "tqdm"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
jax = ">=0.3.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
taskipy = "^1.10.3"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = { cmd = "pytest", help="Run tests"}
lint = { cmd = "pre-commit run --all-files", help="Code format checks"}
